Corrected file paths for images and CSS files.

--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(Home\ background.jpg); 
+    background-image: url(../Images/Home\ background.jpg); 
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; 
