--- a/CSS/About.css
+++ b/CSS/About.css
@@ -126,3 +126,26 @@ h3{
     font-size: 19pt;
     color: whitesmoke;
 }
+footer {
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: 50px; /* Adjust margin as needed */
+}
+
+footer p1, footer p2, footer p3{
+    margin: 5px;
+}
+
+footer p1 {
+    font-size: 14px;
+}
+
+footer p2 {
+    font-size: 12px;
+}
+footer p3{
+    font-size: 11px;
+}
+
