--- a/CSS/About.css
+++ b/CSS/About.css
@@ -149,3 +149,45 @@ footer p3{
     font-size: 11px;
 }
 
+p4{
+    border-radius: 60px 60px 60px 60px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+    color: aquamarine;
+    font-size: 11pt;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2);
+    text-align: center;
+}
+h4{
+    font-weight: bolder;
+    font-size: 19pt;
+    color: whitesmoke;
+}
+p5{
+    border-radius: 60px 60px 60px 60px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+    color: aquamarine;
+    font-size: 11pt;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2);
+    text-align: center;
+}
+
+h5{
+    font-weight: bolder;
+    font-size: 19pt;
+    color: whitesmoke;
+}
+
+p6{
+    border-radius: 60px 60px 60px 60px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+    color: blue;
+    font-size: 11pt;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2);
+    text-align: center;
+}
